--- a/book/deploy.yaml
+++ b/book/deploy.yaml
@@ -15,5 +15,6 @@ spec:
       containers:
         - name: nginx
           image: docker.io/library/nginx:latest
+          imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 80
