--- a/book/TPod.yaml
+++ b/book/TPod.yaml
@@ -1,12 +1,19 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: Tushar
-  namespace: test2
+  name: argocd-tushi
 spec:
   replicas: 2
-  containers:
-  - name: nginx
-    image: docker.io/library/nginx:latest
-    ports:
-    - containerPort: 80
+  selector:
+    matchLabels:
+      app: nginx
+  template:
+    metadata:
+      labels:
+        app: nginx
+    spec:
+      containers:
+        - name: nginx
+          image: docker.io/library/nginx:latest
+          ports:
+            - containerPort: 80
