--- a/book/TPod.yaml
+++ b/book/TPod.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: argocd-tushi
+  name: argocd-Tushar
 spec:
   replicas: 2
   selector:
@@ -15,5 +15,6 @@ spec:
       containers:
         - name: nginx
           image: docker.io/library/nginx:latest
+          imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 80
